<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#A8A0A0"
    android:gravity="center">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/circle_icon"
        android:contentDescription="@string/album_art"
        android:padding="32dp"
        android:src="@drawable/ic_music_note" />

    <TextView
        android:id="@+id/textSongName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/song_name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:maxLines="2"
        android:ellipsize="end"
        android:layout_marginBottom="12dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="24dp">

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textCurrentTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0_00"
                android:textStyle="bold"
                android:letterSpacing="0.15"
                android:textSize="14sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textTotalTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0_00"
                android:textStyle="bold"
                android:letterSpacing="0.15"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:background="@drawable/volume_control_background"
        android:layout_marginBottom="24dp">

        <ImageButton
            android:id="@+id/buttonPrevious"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/circle_icon"
            android:src="@android:drawable/ic_media_previous"
            android:contentDescription="@string/previous" />

        <ImageButton
            android:id="@+id/buttonRewind"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/circle_icon"
            android:src="@android:drawable/ic_media_rew"
            android:contentDescription="@string/rewind_10_seconds" />

        <ImageButton
            android:id="@+id/buttonPlayPause"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/circle_icon"
            android:src="@android:drawable/ic_media_play"
            android:contentDescription="@string/play_pause" />

        <ImageButton
            android:id="@+id/buttonFastForward"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/circle_icon"
            android:src="@android:drawable/ic_media_ff"
            android:contentDescription="@string/fast_forward_10_seconds" />

        <ImageButton
            android:id="@+id/buttonNext"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/circle_icon"
            android:src="@android:drawable/ic_media_next"
            android:contentDescription="@string/next" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:layout_marginTop="10dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/volume_control_background"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volume"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageButton
                android:id="@+id/buttonMute"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/circle_icon"
                android:src="@android:drawable/ic_lock_silent_mode_off"
                android:contentDescription="@string/mute_unmute" />

            <TextView
                android:id="@+id/buttonVolumeDown"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/circle_icon"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/minus_icon"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/volumeSeekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="100"
                android:progress="60" />

            <TextView
                android:id="@+id/buttonVolumeUp"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/circle_icon"
                android:text="@string/plus_icon"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:gravity="center"
                android:maxLines="1"
                android:ellipsize="end" />

        </LinearLayout>

        <TextView
            android:id="@+id/textVolumeLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_percent"
            android:textSize="18sp"
            android:textStyle="bold"
            android:letterSpacing="0.15"
            android:layout_gravity="center"
            android:layout_marginTop="4dp" />

    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</LinearLayout>